# panel-playground

./: README.md  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  co2vis-checkpoint.ipynb
panel_apps/: xgb.py
static/: app.py  index.html
static/co2/: co2vis.html  co2vis.js  serviceWorker.js  site.webmanifest
static/xgboost/: serviceWorker.js  site.webmanifest  xgb.html  xgb.js
static/xgboost2/: xgb.html
